<resources>
    <string name="app_name">Drink!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_communicate">Communicate</string>
    <string name="daily_goal_amount">Daily goal:</string>
    <string name="text_water">Water</string>
    <string name="nav_header_title">Drink!</string>
    <string name="nav_header_subtitle">Keep Calm and Drink Water.</string>
    <string name="input_profile_age">Age:</string>
    <string name="input_profile_weight">Weight:</string>
    <string name="input_profile_unit">Unit:</string>
    <string name="button_save">Save</string>
    <string name="text_profile">Profile</string>

    <string name="empty_not_saved">Drink can not be saved, please try again!</string>
    <string name="how_much_did_you_drink">How much did you drink?</string>
    <string name="statistics">Statistics</string>
    <string name="button_export">Export</string>
    <string name="text_export">Export</string>
    <string name="default_daily_amount">123 oz</string>
    <string name="default_daily_goal_amount">666 oz</string>
    <string name="default_daily_left_amount">543 oz left</string>
    <string name="hint_age">Age</string>
    <string name="hint_weight">Weight</string>
    <string name="default_date">20:23</string>
    <string name="default_amount">27 oz</string>
    <string name="clipboard_button">Save to clipboard!</string>
    <string-array name="Units">
        <item>KG, ML</item>
        <item>Pound, OZ</item>
    </string-array>
</resources>
