<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:text="@string/text_profile"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_age_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/input_profile_age"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_age_input"
        app:layout_constraintBottom_toTopOf="@id/text_weight_label"/>

    <EditText
        android:id="@+id/text_age_input"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@id/text_age_label"
        app:layout_constraintStart_toEndOf="@id/text_age_label"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_weight_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/input_profile_weight"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_weight_input"
        app:layout_constraintBottom_toTopOf="@id/text_unit_label" />

    <EditText
        android:id="@+id/text_weight_input"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@id/text_weight_label"
        app:layout_constraintStart_toStartOf="@id/text_age_input"/>

    <TextView
        android:id="@+id/text_unit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/input_profile_unit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinner_unit_input"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Spinner
        android:id="@+id/spinner_unit_input"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@id/text_unit_label"
        app:layout_constraintBottom_toBottomOf="@id/text_unit_label"
        app:layout_constraintStart_toStartOf="@id/text_age_input"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintTop_toBottomOf="@id/text_unit_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>